GIF do problema de assumir que de 10 em 10 o problema se resolve

--- a/Em aberto/NonSquareEquation/visualize_data.ipynb
+++ b/Em aberto/NonSquareEquation/visualize_data.ipynb
@@ -65,117 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "id": "34ad166e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_mult10:  [0, 10, 20] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [10, 20, 30] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [20, 30, 40] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [30, 40, 50] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [40, 50, 60] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [50, 60, 70] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [60, 70, 80] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [70, 80, 90] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [80, 90, 100] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [90, 100, 110] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n",
-      "x_mult10:  [100, 110, 120] 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def choose_color(n):\n",
     "    n = n % 3\n",
@@ -191,7 +84,7 @@
     "    #print(X, len(X))\n",
     "    #print(y, len(y))\n",
     "    X_mult_10 = [el for el in X if el % 10 == 0]\n",
-    "    print('x_mult10: ', X_mult_10, len(X_mult_10))\n",
+    "    #print('x_mult10: ', X_mult_10, len(X_mult_10))\n",
     "\n",
     "    for n in range(len(X_mult_10)):\n",
     "        x_hline = X_mult_10[n]\n",
@@ -218,8 +111,8 @@
     "\n",
     "passo = 30\n",
     "fig_paths = []\n",
-    "qtde_imgs = 100\n",
-    "for i in range(qtde_imgs):\n",
+    "qtde_imgs = 200\n",
+    "for i in range(100000000 - 3 * (qtde_imgs // 4 ), 100000000 + qtde_imgs // 4):\n",
     "    n_min = i\n",
     "    n_max = n_min + passo \n",
     "    #print(passo, n_min, n_max)\n",
@@ -236,8 +129,8 @@
     "        writer.append_data(image)\n",
     "        \n",
     "# Remove files\n",
-    "#for fig_path in set(fig_paths):\n",
-    "#    os.remove(fig_path)"
+    "for fig_path in set(fig_paths):\n",
+    "    os.remove(fig_path)"
    ]
   },
   {
